--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 Flask==1.1.2
+Flask-Cors==3.0.10
 gunicorn==20.0.4
 idna==2.10
 iniconfig==1.1.1
@@ -17,6 +18,7 @@ PyJWT==2.0.1
 pyparsing==2.4.7
 pytest==6.2.2
 requests==2.25.1
+six==1.15.0
 toml==0.10.2
 urllib3==1.26.3
 Werkzeug==1.0.1
