--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.6.0",
     "husky": "^5.0.9",
     "lint-staged": "^10.5.4",
+    "lodash": "^4.17.20",
     "next": "10.0.6",
     "prettier": "^2.2.1",
     "react": "17.0.1",
@@ -27,5 +28,7 @@
       "prettier --write"
     ]
   },
-  "cacheDirectories": [".next/cache"]
+  "cacheDirectories": [
+    ".next/cache"
+  ]
 }
