--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ MarkupSafe==1.1.1
 marshmallow==3.10.0
 packaging==20.9
 pluggy==0.13.1
+psycopg2-binary==2.8.6
 py==1.10.0
 PyJWT==2.0.1
 pyparsing==2.4.7
