--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.20",
     "next": "10.0.6",
+    "nookies": "^2.5.2",
     "prettier": "^2.2.1",
     "react": "17.0.1",
     "react-bootstrap": "^1.4.3",
