Add package.json and yarn.lock files

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start -p $PORT"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "husky": "^5.0.9",
     "lint-staged": "^10.5.4",
