--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
+alabaster==0.7.12
 attrs==20.3.0
+Babel==2.9.0
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
+docutils==0.16
 Flask==1.1.2
 Flask-Cors==3.0.10
 gunicorn==20.0.4
 idna==2.10
+imagesize==1.2.0
 iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
@@ -15,11 +19,21 @@ packaging==20.9
 pluggy==0.13.1
 psycopg2-binary==2.8.6
 py==1.10.0
+Pygments==2.8.0
 PyJWT==2.0.1
 pyparsing==2.4.7
 pytest==6.2.2
+pytz==2021.1
 requests==2.25.1
 six==1.15.0
+snowballstemmer==2.1.0
+Sphinx==3.5.2
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
 toml==0.10.2
 urllib3==1.26.3
 Werkzeug==1.0.1
