--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p $PORT",
-    "test": "jest --passWithNoTests"
+    "test": "jest --passWithNoTests",
+    "docs": "jsdoc -c jsdoc.conf.json"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -16,7 +17,8 @@
     "nookies": "^2.5.2",
     "react": "17.0.1",
     "react-bootstrap": "^1.4.3",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "jsdoc": "^3.6.6"
   },
   "husky": {
     "hooks": {
